# news-feeder

./: .gitignore  README.md
api/: .gitignore  Pipfile  README.MD  __main__.py  content_fixer.py  email_news_summary.py  environment.yml  fix_content.py  fix_content_loop.py  pull_articles.py  pull_twitter.py  pyproject.toml  requirements.txt  run_by_shell.py  send_email_from_firebase.py  test.py  topic_mapper.py  wsgi.py
api/api/: __init__.py  routes.py
api/app/: routes.py
api/experiments/: google_getter.py  reddit-getter.py  wiki-getter.py
api/feeder/: test.py
api/feeder/common/: article.py  source.py  topic.py
api/feeder/emailer/: emailer.py
api/feeder/extractor/: feed_parser.py  rss_extractor.py  source_extractor.py  twtr_extractor.py
api/feeder/formatter/: article_formatter.py  content_fixer.py  debug_parser.py  feed_getter.py  feed_parser.py  formatter.py  json_formatter.py  keyword_extractor.py  keyword_extractor_v2.py  summarizer.py  topic_mapper.py
api/feeder/models/: article.py  pipeline_event.py  source.py  topic.py
api/feeder/reader/: reader.py  topic_mapper.py
api/feeder/util/: api.py  content_fixer.py  db.py  firebase.py  orm.py  parsers.py  source_extractor.py  time_tools.py
api/util/: api.py  description_parsers.py  email_sender.py  feed_getters.py  firebase.py  google_summaries.py  main.py  news_formatter.py  random.py  test.html  util.py
react-web/: package.json
react-web/experiments/: NavBar.js
react-web/public/: index.html
vue-web/: .eslintrc.js  README.md  package.json
web/: .gitignore  README.md  package.json
(+77 files in other folders)
